# refusal_direction_tfl

./: .gitignore  CLAUDE.md  README.md  TESTING.md  chatbot.py  modal_pipeline.py  plan.org  pyproject.toml  requirements.txt  resume_pipeline.py  test_completions.py  test_performance.py  verify_cuda_environment.py
dataset/: load_dataset.py
gsm8k_dataset/: README.md  naive_completions.py  naive_completions_results.json  process_gsm8k.py  view_data.ipynb
gsm8k_dataset/processed_data/: data-00000-of-00001.arrow  dataset_info.json  state.json
hpc/: README.md  README_HPC.md  run_completions.slurm  run_multiple_models.slurm  run_pipeline.slurm  setup_env.sh  setup_greene.sh
pipeline/: config.py  run_pipeline.py
pipeline/model_utils/: gemma3_model.py  llama2_model.py  llama3_model.py  model_base.py  model_factory.py  qwen3_model.py  qwen_model.py  transformerlens_model.py  yi_model.py
pipeline/submodules/: evaluate_jailbreak.py  evaluate_loss.py  generate_directions.py  select_direction.py
pipeline/utils/: device_utils.py  hook_utils.py  transformerlens_hook_utils.py
something-wrong-dataset/: custom-exploration-prompts.csv  something-wrong-prompts.csv
tests/: test_pipeline_minimal.py  test_transformerlens_integration.py
